@@ -37,6 +37,7 @@ export(p_load)
 export(p_load_gh)
 export(p_loaded)
 export(p_news)
+export(p_old)
 export(p_opendir)
 export(p_path)
 export(p_sa)
