@@ -15,7 +15,7 @@ function(package = NULL, path = getOption("download_path")){
 
     # error handling if path not provided
     if(is.null(path)) {
-        install.packages(file.choose(), .libPaths()[1L], repos = NULL)
+        utils::install.packages(file.choose(), .libPaths()[1L], repos = NULL)
     } else {
         files <- dir(path)
     
@@ -25,16 +25,16 @@ function(package = NULL, path = getOption("download_path")){
         files <- files[tools::file_ext(files) %in% extMatch]
         # interactively select files
         if (is.null(package)) {
-            selectedPackage <- select.list(files, title = "sources")
+            selectedPackage <- utils::select.list(files, title = "sources")
         } else {
             possMatches <- files[agrep(package, files, max.distance = 0)]
             if (length(possMatches)==0) {
                 stop("no packages match: ", package)
             }
-            selectedPackage <- select.list(possMatches, title = "sources")
+            selectedPackage <- utils::select.list(possMatches, title = "sources")
         }
         # install the package
-        install.packages(file.path(path, selectedPackage), .libPaths()[1L], 
+        utils::install.packages(file.path(path, selectedPackage), .libPaths()[1L], 
         	repos = NULL)
     }
     message(paste(selectedPackage, "installed\n"))
